updated writing in kit document

--- a/kit.qmd
+++ b/kit.qmd
@@ -17,11 +17,13 @@ Some individuals were given pieces of land that face an entirely different array
 
 People with BD face significant risks of engaging in unpredictable, time-limited, yet devastating behaviours such as substance abuse, hypersexuality, relationship breakdown, and financial recklessness, but there are gaps in the types of support provided to individuals with a diagnosis of BD, which focuses primarily on regulating mood.
 
-This has left other challenges experienced by them, including risk-taking and decision-making, largely unresolved. To address this issue, we created a personalised recovery and resilience kit using the metaphor of the Japanese pagoda architecture. The kit is informed by findings in past studies, co-design methodology, and community support groups.
+This has left other challenges experienced by them, including risk-taking and decision-making, largely unresolved. To address this issue, we are creating a personalised recovery and resilience kit using the metaphors to organise its content. The development of the kit is informed by findings in past and current studies, and co-design methodology.
 
-Just as people have developed coping mechanisms to minimise the negative impact of natural disasters—such as the Japanese pagoda architecture for resisting the effects of earthquakes—we believe a similar approach is needed for challenges such as these. No matter the type of challenge, individuals can feel a sense of burden by trying to overcome life's demands, which can be difficult to navigate alone. While this kit was developed with people with BD in mind, it is applicable to everyone. It provides a strong sense of security and support through its multidimensional structure to help people work through their respective challenges.
+Just as people have developed coping mechanisms to minimise the negative impact of natural disasters—such as the Japanese pagoda architecture (our first metaphor) for resisting the effects of earthquakes—we believe a similar approach is needed for challenges such as those experienced by people with BD. No matter the type of challenge, individuals can feel a sense of burden by trying to overcome life's demands, which can be difficult to navigate alone. While this kit is being developed with people with BD in mind, it can be useful to everyone, with or without mental health problems.
 
-There are five central elements contributing to the kit, all based on the structure of the pagoda: the Shinbashira (Core Self-Narratives), Interlocking Joints (Social Support Networks), Tiers (Coping Strategies), Roof (Protection and Boundaries), and the Foundation (Physical Well-being). This kit will go through each element and provide resources to contribute to the maintenance of each one.
+It provides a strong sense of security and support through its multidimensional structure to help people work through their respective challenges.
+
+There are five central elements that we want to highlight in a pagoda, and we are using them to organize the kit: the Shinbashira (Core Self-Narratives), Interlocking Joints (Social Support Networks), Tiers (Coping Strategies), Roof (Protection and Boundaries), and the Foundation (Physical Well-being). This kit will go through each element and provide resources to contribute to the maintenance of each one.
 
 ------------------------------------------------------------------------
 
