edited kit qmd segment and added another pagoda kit for separate document

--- a/kit.qmd
+++ b/kit.qmd
@@ -15,58 +15,12 @@ In life, everyone encounters their own unique set of challenges. It is as if eac
 
 Some individuals were given pieces of land that face an entirely different array of difficulties. Instead of their difficulties being associated with what's on the land, their challenge may be navigating the land itself. Their plot of land may be prone to events that are extreme and unpredictable, much like earthquakes. The challenges faced by people with BD are one example of this.
 
+-----
+
+\[Revise\]
+
 People with BD face significant risks of engaging in unpredictable, time-limited, yet devastating behaviours such as substance abuse, hypersexuality, relationship breakdown, and financial recklessness, but there are gaps in the types of support provided to individuals with a diagnosis of BD, which focuses primarily on regulating mood.
 
-This has left other challenges experienced by them, including risk-taking and decision-making, largely unresolved. To address this issue, we are creating a personalised recovery and resilience kit using the metaphors to organise its content. The development of the kit is informed by findings in past and current studies, and co-design methodology.
+This has left other challenges experienced by them, including risk-taking and decision-making, largely unresolved. To address this issue, we are creating a personalised recovery and resilience kit. The development of the kit is informed by findings in past and current studies, and co-design methodology.
 
-Just as people have developed coping mechanisms to minimise the negative impact of natural disasters—such as the Japanese pagoda architecture (our first metaphor) for resisting the effects of earthquakes—we believe a similar approach is needed for challenges such as those experienced by people with BD. No matter the type of challenge, individuals can feel a sense of burden by trying to overcome life's demands, which can be difficult to navigate alone. While this kit is being developed with people with BD in mind, it can be useful to everyone, with or without mental health problems.
-
-It provides a strong sense of security and support through its multidimensional structure to help people work through their respective challenges.
-
-There are five central elements that we want to highlight in a pagoda, and we are using them to organize the kit: the Shinbashira (Core Self-Narratives), Interlocking Joints (Social Support Networks), Tiers (Coping Strategies), Roof (Protection and Boundaries), and the Foundation (Physical Well-being). This kit will go through each element and provide resources to contribute to the maintenance of each one.
-
-------------------------------------------------------------------------
-
-### **1. Shinbashira (Core Self-Narratives)**
-
-\[Write about what is the Shinbashira? Example of what the Shinbashira means in this context. Why is this the central pillar? What types of resources will be here? Why is it important to foster the sense of identy and core values?\]
-
-#### **Resources:**
-
-------------------------------------------------------------------------
-
-### **2. Interlocking Joints (Social Support Networks)**:
-
-\[What are the interlocking joints? What do they mean in this context? Why are social support networks important? What types of resources will be here?\]
-
-#### **Resources:**
-
-------------------------------------------------------------------------
-
-### **3. Tiers (Coping Strategies)**:
-
-\[What are the tiers of the pagoda? What do they mean in this context? Why are strong coping strategies important? What are healthy coping strategies? What types of resources will be here?\]
-
-#### **Resources:**
-
-------------------------------------------------------------------------
-
-### **4. Roof (Protection and Boundaries):**
-
-\[What is the roof of the pagoda and why is it important? What does it mean in this context? Why are boundaries and protection important? What types of resources will be here?\]
-
-#### **Resources:**
-
-\[Ideas for resources: What are healthy boundaries? How do you implement boundaries?\]
-
-------------------------------------------------------------------------
-
-### **5. Foundation (Physical Well-being)**:
-
-\[What is the foundation of the pagoda and why is it important? What does it mean in this context? Why is physical well-being important? What types of resources will be here?\]
-
-#### **Resources:**
-
-------------------------------------------------------------------------
-
-Click [here](https://github.com/LuciaNico/bipolarvirtual/blob/main/RRP%20white%20paper.pdf) to access White Paper full version.
+\[Insert Document Here\]
